--- a/packages/payment-app/package.json
+++ b/packages/payment-app/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "build": "tsc && vite build --outDir dist",
     "envs": "node ./evn-parameters.js",
-    "deploy": "amplify publish -c",
+    "deploy": "sst deploy",
     "dev": "sh ./scripts/toDev.sh",
     "staging": "sh ./scripts/toStaging.sh",
     "production": "sh ./scripts/toProduction.sh",
