--- a/packages/delivery-customer/package.json
+++ b/packages/delivery-customer/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "sst bind --region eu-west-3 --stage development  vite",
+    "start": "sst bind --region eu-west-3 --stage bari  vite",
     "preview": "vite preview",
     "build": "tsc && vite build --outDir dist",
     "envs": "node ./evn-parameters.js",
-    "deploy": "amplify publish -c",
+    "deploy": "sst deploy",
     "dev": "sh ./scripts/toDev.sh",
     "staging": "sh ./scripts/toStaging.sh",
     "production": "sh ./scripts/toProduction.sh",
