--- a/packages/delivery-driver/package.json
+++ b/packages/delivery-driver/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "sst bind --region eu-west-3 --stage development  vite",
+    "start": "sst bind --region eu-west-3 --stage bari  vite",
     "preview": "vite preview",
     "build": "tsc && vite build --outDir dist",
     "envs": "node ./evn-parameters.js",
