--- a/packages/Store-backend/package.json
+++ b/packages/Store-backend/package.json
@@ -10,7 +10,6 @@
     "deep-equal": "^2.0.5",
     "digest-fetch": "^1.2.1",
     "hyfn-server": "^1.0.3",
-
     "jimp": "^0.16.0",
     "mathjs": "^11.5.1",
     "mongodb": "^4.7.0",
@@ -24,7 +23,11 @@
   "scripts": {
     "envs": "node ./fetch-envs.js",
     "createDatabaseUser": "node ./createDatabaseUser.js",
-    "deploy": "yarn build-ts && serverless deploy",
+    "deploy-prod": "sst deploy --stage production",
+    "deploy-staging": "sst deploy --stage staging",
+    "deploy-dev": "sst deploy --region eu-west-3 --stage development",
+    "sst-dev": "sst dev --region eu-west-3 --stage development",
+    "start": "sst bind --region eu-west-3 --stage development  vite",
     "build-ts": "tsc --build ./tsconfig.json"
   },
   "devDependencies": {
