--- a/packages/delivery-merchant/package.json
+++ b/packages/delivery-merchant/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "sst bind --region eu-west-3 --stage bari  vite",
-    "dev": "sst dev --region eu-west-3 --stage bari ",
+    "deploy-prod": "sst deploy --stage production",
+    "deploy-staging": "sst deploy --stage staging",
+    "deploy-dev": "sst deploy --region eu-west-3 --stage development",
+    "sst-dev": "sst dev --region eu-west-3 --stage development",
+    "start": "sst bind --region eu-west-3 --stage development  vite",
     "preview": "vite preview",
     "build": "tsc && vite build --outDir dist",
     "envs": "node ./evn-parameters.js",
