--- a/packages/driver-backend/package.json
+++ b/packages/driver-backend/package.json
@@ -8,7 +8,6 @@
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "hyfn-server": "^1.0.3",
-
     "jimp": "^0.16.1",
     "mathjs": "^11.5.1",
     "mongodb": "^4.7.0",
@@ -25,7 +24,11 @@
     "format:check": "prettier --check **/*.{js,jsx,ts,tsx}",
     "format:write": "prettier --write **/*.{js,jsx,ts,tsx}",
     "lint": "eslint '**/*.js' --ignore-pattern node_modules/",
-    "deploy": "yarn build-ts && serverless deploy",
+    "deploy-prod": "sst deploy --stage production",
+    "deploy-staging": "sst deploy --stage staging",
+    "deploy-dev": "sst deploy --region eu-west-3 --stage development",
+    "sst-dev": "sst dev --region eu-west-3 --stage development",
+    "start": "sst bind --region eu-west-3 --stage development  vite",
     "build-ts": "tsc --build ./tsconfig.json"
   },
   "devDependencies": {
