--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@serverless-stack/resources": "^1.18.4",
     "@tsconfig/node16": "^1.0.3",
     "aws-cdk-lib": "2.62.2",
+    "colorette": "^2.0.19",
     "constructs": "10.1.156",
     "sst": "^2.3.0",
     "typescript": "^4.9.5"
