--- a/packages/admin-backend/package.json
+++ b/packages/admin-backend/package.json
@@ -11,6 +11,7 @@
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
     "start": "sst bind --region eu-west-3 --stage development  vite",
+    "wrap": "node ../../wrapper.cjs",
     "build-ts": "tsc --build ./tsconfig.json"
   },
   "author": "",
