--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "after-install": "node ./fetch-envs.js && node ./fetch-fr-envs.js && tsc --build ./packages/hyfn-client && tsc --build ./packages/hyfn-types && tsc --build ./packages/hyfn-server ",
     "fetch-envs": "node ./fetch-envs.js && node ./fetch-fr-envs.js",
     "build-ts": "tsc --build ./packages/hyfn-client && tsc --build ./packages/hyfn-types && tsc --build ./packages/hyfn-server ",
+    "createDatabaseUser": "node ./createDatabaseUser.js",
     "start": "sst dev --region eu-west-3"
   },
   "devDependencies": {
