--- a/packages/customer-backend/package.json
+++ b/packages/customer-backend/package.json
@@ -25,7 +25,8 @@
     "deploy-staging": "sst deploy --stage staging",
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
-    "start": "sst bind --region eu-west-3 --stage development  vite"
+    "start": "sst bind --region eu-west-3 --stage development  vite",
+    "wrap": "node ../../wrapper.cjs"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.27.0",
