--- a/packages/delivery-customer/package.json
+++ b/packages/delivery-customer/package.json
@@ -10,6 +10,7 @@
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
     "start": "sst bind --region eu-west-3 --stage development  vite",
+    "wrap": "node ../../wrapper.cjs",
     "build": "tsc && vite build --outDir dist",
     "envs": "node ./evn-parameters.js",
     "deploy": "sst deploy",
