--- a/packages/delivery-merchant/package.json
+++ b/packages/delivery-merchant/package.json
@@ -9,6 +9,7 @@
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
     "start": "sst bind --region eu-west-3 --stage development  vite",
+    "wrap": "node ../../wrapper.cjs",
     "preview": "vite preview",
     "build": "tsc && vite build --outDir dist",
     "envs": "node ./evn-parameters.js",
