--- a/packages/payment-app/package.json
+++ b/packages/payment-app/package.json
@@ -10,6 +10,7 @@
     "deploy-prod": "sst deploy --stage production",
     "deploy-staging": "sst deploy --stage staging",
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
+    "wrap": "node ../../wrapper.cjs",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
     "start": "sst bind --region eu-west-3 --stage development  vite",
     "lint": "eslint . --ext .js,.ts ./src/*"
