--- a/packages/product-library-backend/package.json
+++ b/packages/product-library-backend/package.json
@@ -10,6 +10,7 @@
     "deploy-staging": "sst deploy --stage staging",
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
+    "wrap": "node ../../wrapper.cjs",
     "start": "sst bind --region eu-west-3 --stage development  vite",
     "build-ts": "tsc --build ./tsconfig.json"
   },
