--- a/packages/delivery-driver/package.json
+++ b/packages/delivery-driver/package.json
@@ -21,12 +21,12 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.4.0",
     "@mantine/carousel": "^5.10.4",
     "@mantine/core": "^6.0.2",
     "@mantine/dates": "^6.0.2",
     "@mantine/form": "^5.10.0",
     "@mantine/hooks": "^6.0.2",
-    "@emotion/server": "^11.4.0",
     "@mantine/notifications": "^5.10.0",
     "@mantine/tiptap": "^5.10.0",
     "@tabler/icons": "^1.119.0",
@@ -43,15 +43,20 @@
     "crypto-browserify": "^3.12.0",
     "embla-carousel-react": "^7.0.5",
     "global": "^4.4.0",
-    "hyfn-client": "*",
     "html5-qrcode": "^2.3.3",
+    "hyfn-client": "*",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
+    "leaflet": "^1.9.3",
+    "mapbox-gl": "^2.13.0",
+    "mapbox-gl-leaflet": "^0.0.15",
     "react": "18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.1",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.0.21",
     "react-query": "^3.39.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
@@ -74,6 +79,8 @@
     "zod": "^3.21.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "@types/mapbox-gl-leaflet": "^0.0.1",
     "@types/react": "16.14.25",
     "@types/react-dom": "^16.9.14",
     "@types/react-helmet": "^6.1.6",
