--- a/packages/delivery-customer/package.json
+++ b/packages/delivery-customer/package.json
@@ -25,6 +25,7 @@
     "@mantine/hooks": "^6.0.2",
     "@mantine/notifications": "^5.10.0",
     "@mantine/tiptap": "^5.10.0",
+    "@tabler/icons-react": "^2.14.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -93,6 +94,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5"
   },
   "imports": {
