--- a/packages/Store-backend/package.json
+++ b/packages/Store-backend/package.json
@@ -15,6 +15,8 @@
     "mongodb": "^4.7.0",
     "mongoose": "^7.0.1",
     "prettier": "^2.7.1",
+    "request": "^2.88.2",
+    "stream-to-buffer": "^0.1.0",
     "zod": "^3.20.6"
   },
   "scripts": {
