--- a/packages/hyfn-client/package.json
+++ b/packages/hyfn-client/package.json
@@ -30,5 +30,19 @@
   "module": "src/index.ts",
   "types": "src/index.ts",
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "@mantine/core": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
+    "@mantine/tiptap": "^6.0.7",
+    "@tabler/icons-react": "^2.15.0",
+    "@tiptap/extension-highlight": "^2.0.2",
+    "@tiptap/extension-link": "^2.0.2",
+    "@tiptap/extension-subscript": "^2.0.2",
+    "@tiptap/extension-superscript": "^2.0.2",
+    "@tiptap/extension-text-align": "^2.0.2",
+    "@tiptap/extension-underline": "^2.0.2",
+    "@tiptap/pm": "^2.0.2",
+    "@tiptap/react": "^2.0.2",
+    "@tiptap/starter-kit": "^2.0.2"
+  }
 }
