--- a/packages/customer-backend/package.json
+++ b/packages/customer-backend/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "deep-equal": "^2.0.5",
+    "drizzle-orm": "^0.25.4",
     "firebase-admin": "^11.7.0",
     "hyfn-server": "*",
     "mathjs": "^11.5.1",
     "mongodb": "^4.7.0",
+    "pg": "^8.10.0",
     "prettier": "^2.7.1",
     "zod": "^3.21.0"
   },
@@ -34,6 +36,8 @@
     "@types/aws-lambda": "^8.10.111",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.0",
+    "@types/pg": "^8.6.6",
+    "drizzle-kit": "^0.17.6",
     "eslint": "^8.26.0",
     "serverless-dotenv-plugin": "^4.0.2",
     "serverless-webpack": "^5.11.0",
