--- a/packages/hyfn-server/package.json
+++ b/packages/hyfn-server/package.json
@@ -16,13 +16,16 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.14.1",
+    "@types/pg": "^8.6.6",
     "aws-sdk": "^2.1322.0",
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
+    "drizzle-kit": "^0.17.6",
     "mathjs": "^11.6.0",
     "mongodb": "^4.7.0",
     "rollup": "2.78.0",
     "rollup-plugin-dts": "^5.2.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
@@ -31,6 +34,9 @@
   "types": "src/index.ts",
   "type": "module",
   "dependencies": {
-    "aws-jwt-verify": "^4.0.0"
+    "aws-jwt-verify": "^4.0.0",
+    "drizzle-orm": "^0.25.4",
+    "drizzle-zod": "^0.4.1",
+    "pg": "^8.10.0"
   }
 }
