--- a/packages/Store-backend/package.json
+++ b/packages/Store-backend/package.json
@@ -2,6 +2,9 @@
   "private": true,
   "name": "store-backend",
   "version": "1.0.0",
+  "main": "lambdas/index.ts",
+  "module": "lambdas/index.ts",
+  "types": "lambdas/index.ts",
   "dependencies": {
     "aws-sdk": "^2.1189.0",
     "aws4": "^1.11.0",
