--- a/packages/admin-backend/package.json
+++ b/packages/admin-backend/package.json
@@ -2,7 +2,9 @@
   "name": "admin-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lambdas/index.ts",
+  "module": "lambdas/index.ts",
+  "types": "lambdas/index.ts",
   "scripts": {
     "envs": "node ./fetch-envs.js",
     "createDatabaseUser": "node ./createDatabaseUser.js",
