--- a/packages/driver-backend/package.json
+++ b/packages/driver-backend/package.json
@@ -1,6 +1,9 @@
 {
   "name": "driver-backend",
   "version": "0.1.2",
+  "main": "lambdas/index.ts",
+  "module": "lambdas/index.ts",
+  "types": "lambdas/index.ts",
   "dependencies": {
     "aws-sdk": "^2.1194.0",
     "aws4": "^1.11.0",
