--- a/packages/driver-management-backend/package.json
+++ b/packages/driver-management-backend/package.json
@@ -2,6 +2,9 @@
   "private": true,
   "version": "1.0.0",
   "name": "driver-management-backend",
+  "main": "lambdas/index.ts",
+  "module": "lambdas/index.ts",
+  "types": "lambdas/index.ts",
   "dependencies": {
     "@aws-sdk/client-kms": "^3.271.0",
     "@serverless/eslint-config": "^5.0.1",
