--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "deploy-dev": "sst deploy --region eu-west-3 --stage development",
     "wrap": "node ../../wrapper.cjs",
     "sst-dev": "sst dev --region eu-west-3 --stage development",
-    "start": "sst bind --region eu-west-3 --stage development  vite",
     "console": "sst console",
     "after-install": "node ./fetch-envs.js && node ./fetch-fr-envs.js && tsc --build ./packages/hyfn-client && tsc --build ./packages/hyfn-types && tsc --build ./packages/hyfn-server ",
     "fetch-envs": "node ./fetch-envs.js && node ./fetch-fr-envs.js",
@@ -45,9 +44,6 @@
     "kysely-codegen": "^0.10.0",
     "prettier": "^2.8.8",
     "prettier-plugin-sql": "^0.14.0",
-    "serverless-dotenv-plugin": "^4.0.2",
-    "serverless-iam-roles-per-function": "^3.2.0",
-    "serverless-webpack": "^5.11.0",
     "sst": "2.8.27",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
@@ -82,7 +78,6 @@
     "@mantine/notifications": "^6.0.13",
     "@mantine/rte": "^5.2.3",
     "@mantine/tiptap": "^6.0.13",
-    "@serverless/eslint-config": "^5.0.1",
     "@tabler/icons": "^1.119.0",
     "@tabler/icons-react": "^2.21.0",
     "@tanstack/react-query": "^4.24.10",
@@ -122,7 +117,7 @@
     "global": "^4.4.0",
     "html5-qrcode": "^2.3.3",
     "hyfn-client": "*",
-    "hyfn-server": "^1.0.3",
+    "hyfn-server": "*",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "jimp": "^0.16.1",
@@ -161,7 +156,6 @@
     "react-slick": "^0.29.0",
     "request": "^2.88.2",
     "serve": "^14.1.2",
-    "serverless-dotenv-plugin": "^4.0.2",
     "slick-carousel": "^1.8.1",
     "stream": "^0.0.2",
     "stream-to-buffer": "^0.1.0",
