--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   "dependencies": {
     "//": "test end",
     "store-backend": "*",
+    "driver-management-backend": "*",
+    "driver-backend": "*",
     "@aws-sdk/client-kms": "^3.271.0",
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.4.0",
