--- a/packages/customer-backend/package.json
+++ b/packages/customer-backend/package.json
@@ -4,6 +4,7 @@
   "main": "lambdas/index.ts",
   "module": "lambdas/index.ts",
   "types": "lambdas/index.ts",
+  "type": "module",
   "dependencies": {},
   "scripts": {
     "envs": "node ./fetch-envs.js",
