--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "devDependencies": {
     "//": "test",
-    "@types/crypto-js": "^4.1.1",
+    "@serverless/eslint-config": "^5.0.1",
     "@tsconfig/node16": "^1.0.3",
     "@types/aws-lambda": "^8.10.111",
+    "@types/crypto-js": "^4.1.1",
     "@types/leaflet": "^1.9.3",
     "@types/mapbox-gl-leaflet": "^0.0.1",
     "@types/node": "^18.15.0",
@@ -49,7 +50,8 @@
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5",
     "webpack-node-externals": "^3.0.0",
-    "workbox-window": "^6.5.4"
+    "workbox-window": "^6.5.4",
+    "prisma": "^4.15.0"
   },
   "workspaces": [
     "packages/*"
