--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/mapbox-gl-leaflet": "^0.0.1",
     "@types/node": "^18.15.0",
     "@types/pg": "^8.6.6",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "^16.9.14",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "@types/react-helmet": "^6.1.6",
     "@types/react-helmet-async": "^1.0.3",
     "@types/uuid": "^9.0.1",
@@ -39,6 +39,7 @@
     "eslint": "^8.26.0",
     "kysely-codegen": "^0.10.0",
     "prettier": "^2.8.8",
+    "prisma": "^4.15.0",
     "sst": "2.8.27",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
@@ -50,8 +51,7 @@
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5",
     "webpack-node-externals": "^3.0.0",
-    "workbox-window": "^6.5.4",
-    "prisma": "^4.15.0"
+    "workbox-window": "^6.5.4"
   },
   "workspaces": [
     "packages/*"
@@ -129,8 +129,8 @@
     "prosemirror-state": "^1.4.2",
     "prosemirror-transform": "^1.7.0",
     "prosemirror-view": "^1.29.1",
-    "react": "18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.1.4",
